--- a/bayesian_neuralnet_mnist.ipynb
+++ b/bayesian_neuralnet_mnist.ipynb
@@ -154,6 +154,12 @@
     }
    ],
    "source": [
+    "def conv2d(x, W):\n",
+    "    return tf.nn.conv2d(x, W, strides= [1,1,1,1], padding= \"SAME\")\n",
+    "\n",
+    "def max_pool_2x2(x):\n",
+    "    return tf.nn.max_pool(x, ksize= [1,2,2,1], strides= [1,2,2,1], padding= \"SAME\")\n",
+    "\n",
     "def variables():\n",
     "    x = tf.placeholder(tf.float32, shape=[None, D])\n",
     "    y = tf.placeholder(tf.int32, shape=[None])\n",
